[EditContext] Deactivate EditContext earlier to prevent being impacted by DispatchFocusEvent

EditContext's activation is synced with the associated element being
focused or not. If an element loses focus, its associated EditContext
is deactivated.
Before this patch, deactivate the EditContext associated with
`old_focused_element` after `DispatchFocusEvent`. However,
`DispatchFocusEvent` could potentially result in another change in
focus, which would prevent the EditContext's from being deactivated.

Bug: 375711382
Change-Id: I4fb422602faeae5145b3431aee063d367b69fbd3
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6332446
Reviewed-by: Dan Clark <daniec@microsoft.com>
Reviewed-by: Mason Freed <masonf@chromium.org>
Commit-Queue: Peng Zhou <zhoupeng.1996@bytedance.com>
Cr-Commit-Position: refs/heads/main@{#1429887}